tests/k8s_testcases/network-policy-checks-bad-path/mixed_ipv4_cidr_ipv6_except.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipv4-cidr-ipv6-except
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations IPv4
          except:
            - a000:800::/32
      ports:
        - port: 53
          protocol: UDP
